--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "styled-components": "^4.4.1",
-    "terser-webpack-plugin": "1.1.0",
+    "terser-webpack-plugin": "^2.3.1",
     "tinycolor2": "^1.4.1",
     "typescript": "3.2.1",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
